data/derived/sp14/progs/unify/prog1210.ml.out
Characters 19-32:
  let _ = [9;9;9;9]::([0;0]@[1;1]);;
                     ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
